# agentgate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  _verify_against_paper.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agentgate.yml  ci.yml  docs.yml
agentgate/: __init__.py  adversarial.py  cli.py  confidence.py  cost.py  discovery.py  expectations.py  kpi_trap.py  memory_eval.py  metrics.py  mock.py  multi_agent.py  noise.py  pytest_plugin.py  regression.py  report.py  reproducibility.py  runner.py  scenario.py  silent_failures.py  state_diff.py  tool_selection.py  trace.py  trajectory.py  types.py
agentgate/_legacy/: __init__.py  ci.py  core.py  recorder.py  suite.py  types.py
agentgate/adapters/: __init__.py  anthropic_adapter.py  base.py  generic.py  langgraph.py  openai_adapter.py
docs/: .dockerignore  Dockerfile  HN_POST.md  PITCH.md  POST_MORTEM.md  PROJECT.md  REFERENCES.md  cold-emails.md  execution-plan.md  landing-page.md
docs/mkdocs/: mkdocs.yml
docs/mkdocs/docs/: index.md  research.md
docs/mkdocs/docs/api/: adapters.md  core.md  expectations.md  metrics.md
examples/: README.md  demo_code_agent.py  demo_customer_support.py  demo_e2e_vs_unit.py  demo_research_assistant.py  quickstart.py  real_langgraph_agent.py  run_adversarial.py  run_multistep.py
examples/airline_bot/: README.md  agent.py  test_adversarial.py  test_booking.py
examples/traces/: Check_the_status_of_booking_BK_run01.json  Check_the_status_of_booking_BK_run02.json  Check_the_status_of_booking_BK_run03.json  Search_for_flights_from_SFO_to_run01.json  Search_for_flights_from_SFO_to_run02.json  Search_for_flights_from_SFO_to_run03.json  What's_the_baggage_policy_for__run01.json  What's_the_baggage_policy_for__run02.json  What's_the_baggage_policy_for__run03.json
scripts/: check_sd.py
tests/: test_academic.py  test_adapters.py  test_adversarial.py  test_confidence.py  test_cost.py  test_kpi_trap.py  test_llm_judge.py  test_memory_eval.py  test_metrics.py  test_milestones.py  test_mock.py  test_multi_agent.py  test_noise.py  test_openai_adapter.py  test_pytest_plugin.py  test_readme_adversarial.py  test_readme_mock.py  test_real_agent.py  test_regression.py  test_report.py  test_reproducibility.py  test_runner.py  test_scenario.py  test_side_effects.py  test_silent_failures.py  test_state_diff.py  test_tool_selection.py  test_trajectory.py
(+7 files in other folders)
